# embassy_rustystm32

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
